// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvisoryHeader Should match the snapshots when loaded 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-grid pf-m-gutter"
    style="min-height: 150px;"
  >
    <div
      class="pf-v6-l-grid__item pf-m-12-col-on-sm pf-m-8-col-on-md"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        />
        <div
          class="pf-v6-l-stack__item"
          style="white-space: pre-line;"
        >
          Kernel-based Virtual.
        </div>
        <div
          class="pf-v6-l-stack__item"
        >
          Issued 30 June 2020
          <br />
          Modified 30 June 2020
        </div>
      </div>
    </div>
    <div
      class="pf-v6-l-grid__item pf-m-12-col-on-sm pf-m-4-col-on-md"
    >
      <div
        class="pf-v6-l-flex pf-m-column"
      >
        <div
          class=""
        >
          <div
            class="pf-v6-l-split pf-m-gutter infobox"
          >
            <div
              class="pf-v6-l-split__item pf-m-fill"
            >
              <div
                class="pf-v6-l-flex pf-m-column"
              >
                <div
                  class="pf-m-spacer-none"
                >
                  <h5
                    class="pf-v6-c-title pf-m-h5"
                    data-ouia-component-id="OUIA-Generated-Title-3"
                    data-ouia-component-type="PF6/Title"
                    data-ouia-safe="true"
                  >
                    Advisory type
                  </h5>
                </div>
                <div
                  class="pf-m-spacer-sm"
                >
                  <div
                    class="pf-v6-l-split pf-m-gutter"
                  >
                    <div
                      class="pf-v6-l-split__item"
                    >
                      <span
                        class="pf-v6-c-icon"
                      >
                        <span
                          class="pf-v6-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v6-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 896 1024"
                            width="1em"
                          >
                            <path
                              d="M861.5,0 L34.5,0 C15.4,0 0,14.3 0,32 L0,452.1 C0,768 387.7,1024 448.5,1024 C509.3,1024 896,768 896,452.2 L896,32 C896,14.3 880.6,0 861.5,0 Z M490.7,768 L405.3,768 C393.5,767.8 384.2,757.5 384,744.7 L384,663.3 C384.2,650.5 393.6,640.3 405.3,640 L490.7,640 C502.5,640.2 511.8,650.5 512,663.3 L512,744.7 L512.1,744.7 C511.8,757.5 502.4,767.8 490.7,768 Z M543.9,162.7 L517.2,514.4 C515.8,530.9 502,544 485.3,544 L410.6,544 C394,544 380.1,531.2 378.7,514.7 L352.1,163 C350.5,144.3 365.3,128.3 384,128.3 L512,128 C530.7,128 545.4,144 543.9,162.7 Z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                    <div
                      class="pf-v6-l-split__item pf-m-fill"
                    >
                      Security
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class="pf-v6-l-split pf-m-gutter infobox"
          >
            <div
              class="pf-v6-l-split__item pf-m-fill"
            >
              <div
                class="pf-v6-l-flex pf-m-column"
              >
                <div
                  class="pf-m-spacer-none"
                >
                  <h5
                    class="pf-v6-c-title pf-m-h5"
                    data-ouia-component-id="OUIA-Generated-Title-4"
                    data-ouia-component-type="PF6/Title"
                    data-ouia-safe="true"
                  >
                    Severity
                  </h5>
                </div>
                <div
                  class="pf-m-spacer-sm"
                >
                  <div
                    class="pf-v6-l-flex pf-m-row"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="pf-v6-c-icon pf-m-md"
                      >
                        <span
                          class="pf-v6-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v6-svg"
                            color="var(--pf-t--global--icon--color--severity--important--default)"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 896 1024"
                            width="1em"
                          >
                            <path
                              d="M861.5,0 L34.5,0 C15.4,0 0,14.3 0,32 L0,452.1 C0,768 387.7,1024 448.5,1024 C509.3,1024 896,768 896,452.2 L896,32 C896,14.3 880.6,0 861.5,0 Z M490.7,768 L405.3,768 C393.5,767.8 384.2,757.5 384,744.7 L384,663.3 C384.2,650.5 393.6,640.3 405.3,640 L490.7,640 C502.5,640.2 511.8,650.5 512,663.3 L512,744.7 L512.1,744.7 C511.8,757.5 502.4,767.8 490.7,768 Z M543.9,162.7 L517.2,514.4 C515.8,530.9 502,544 485.3,544 L410.6,544 C394,544 380.1,531.2 378.7,514.7 L352.1,163 C350.5,144.3 365.3,128.3 384,128.3 L512,128 C530.7,128 545.4,144 543.9,162.7 Z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      Important
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AdvisoryHeader Should match the snapshots when loading 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-grid pf-m-gutter"
    style="min-height: 150px;"
  >
    <div
      class="pf-v6-l-grid__item pf-m-12-col-on-sm pf-m-8-col-on-md"
    >
      <div
        class="ins-c-spinner ins-m-center"
        role="status"
      >
        <span
          class="pf-v6-u-screen-reader"
        >
          Loading...
        </span>
      </div>
    </div>
    <div
      class="pf-v6-l-grid__item pf-m-12-col-on-sm pf-m-4-col-on-md"
    >
      <div
        class="pf-v6-l-flex pf-m-column"
      >
        <div
          class=""
        >
          <div
            class="pf-v6-l-split pf-m-gutter infobox"
          >
            <div
              class="pf-v6-l-split__item pf-m-fill"
            >
              <div
                class="pf-v6-l-flex pf-m-column"
              >
                <div
                  class="pf-m-spacer-none"
                >
                  <h5
                    class="pf-v6-c-title pf-m-h5"
                    data-ouia-component-id="OUIA-Generated-Title-1"
                    data-ouia-component-type="PF6/Title"
                    data-ouia-safe="true"
                  >
                    Advisory type
                  </h5>
                </div>
                <div
                  class="pf-m-spacer-sm"
                >
                  <div
                    class="pf-v6-l-split pf-m-gutter"
                  >
                    <div
                      class="pf-v6-l-split__item"
                    >
                      <span
                        class="pf-v6-c-icon"
                      >
                        <span
                          class="pf-v6-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v6-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 896 1024"
                            width="1em"
                          >
                            <path
                              d="M861.5,0 L34.5,0 C15.4,0 0,14.3 0,32 L0,452.1 C0,768 387.7,1024 448.5,1024 C509.3,1024 896,768 896,452.2 L896,32 C896,14.3 880.6,0 861.5,0 Z M490.7,768 L405.3,768 C393.5,767.8 384.2,757.5 384,744.7 L384,663.3 C384.2,650.5 393.6,640.3 405.3,640 L490.7,640 C502.5,640.2 511.8,650.5 512,663.3 L512,744.7 L512.1,744.7 C511.8,757.5 502.4,767.8 490.7,768 Z M543.9,162.7 L517.2,514.4 C515.8,530.9 502,544 485.3,544 L410.6,544 C394,544 380.1,531.2 378.7,514.7 L352.1,163 C350.5,144.3 365.3,128.3 384,128.3 L512,128 C530.7,128 545.4,144 543.9,162.7 Z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                    <div
                      class="pf-v6-l-split__item pf-m-fill"
                    >
                      Security
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class="pf-v6-l-split pf-m-gutter infobox"
          >
            <div
              class="pf-v6-l-split__item pf-m-fill"
            >
              <div
                class="pf-v6-l-flex pf-m-column"
              >
                <div
                  class="pf-m-spacer-none"
                >
                  <h5
                    class="pf-v6-c-title pf-m-h5"
                    data-ouia-component-id="OUIA-Generated-Title-2"
                    data-ouia-component-type="PF6/Title"
                    data-ouia-safe="true"
                  >
                    Severity
                  </h5>
                </div>
                <div
                  class="pf-m-spacer-sm"
                >
                  <div
                    class="pf-v6-l-flex pf-m-row"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="pf-v6-c-icon pf-m-md"
                      >
                        <span
                          class="pf-v6-c-icon__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v6-svg"
                            color="var(--pf-t--global--icon--color--severity--important--default)"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 896 1024"
                            width="1em"
                          >
                            <path
                              d="M861.5,0 L34.5,0 C15.4,0 0,14.3 0,32 L0,452.1 C0,768 387.7,1024 448.5,1024 C509.3,1024 896,768 896,452.2 L896,32 C896,14.3 880.6,0 861.5,0 Z M490.7,768 L405.3,768 C393.5,767.8 384.2,757.5 384,744.7 L384,663.3 C384.2,650.5 393.6,640.3 405.3,640 L490.7,640 C502.5,640.2 511.8,650.5 512,663.3 L512,744.7 L512.1,744.7 C511.8,757.5 502.4,767.8 490.7,768 Z M543.9,162.7 L517.2,514.4 C515.8,530.9 502,544 485.3,544 L410.6,544 C394,544 380.1,531.2 378.7,514.7 L352.1,163 C350.5,144.3 365.3,128.3 384,128.3 L512,128 C530.7,128 545.4,144 543.9,162.7 Z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                    <div
                      class=""
                    >
                      Important
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
